// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should display a selected item 1`] = `
<li
  className="undefined tc-enumeration-item selected-item"
  id="0-item"
>
  <button
    aria-describedby={42}
    className="undefined tc-enumeration-item-label btn btn-default"
    disabled={false}
    name="toto"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <span>
      toto
    </span>
  </button>
  <div
    className="undefined tc-enumeration-item-actions"
  />
</li>
`;

exports[`Item should display value with three buttons 1`] = `
<li
  className="tc-enumeration-item"
  id="0-item"
>
  <button
    aria-describedby={42}
    className="undefined tc-enumeration-item-label btn btn-default"
    disabled={false}
    name="toto"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <span>
      toto
    </span>
  </button>
  <div
    className="undefined tc-enumeration-item-actions"
  >
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      name="Edit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      name="Delete"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </div>
</li>
`;
